Add nodemon support

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev:old": "nest start --watch",
+    "start:dev": "nodemon --config nodemon.json",
     "start:dev:db": "bash ./src/scripts/start-db.sh",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -55,12 +56,13 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
+    "nodemon": "^2.0.15",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
