--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
