Set up migrations

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,10 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# env
+.env
+
+# TypeORM
+.ormconfig.json
+ormconfig.json
