--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=root
-POSTGRES_DATABASE=quotes-db
+POSTGRES_DB=quotes-db
 PORT=3000
 MODE=DEV
 RUN_MIGRATIONS=true
