Update JWT to include user info

--- a/.env
+++ b/.env
@@ -8,5 +8,6 @@ MODE=DEV
 RUN_MIGRATIONS=true
 JWT_SECRET=verysecretyesyes
 JWT_EXPIRATION_TIME=3600
+JWT_ACCESS_TOKEN_SECRET=verysecretyesyes
 JWT_ACCESS_TOKEN_EXPIRATION_TIME=3600
 JWT_REFRESH_TOKEN_EXPIRATION_TIME=3600
