Move app origin to .env

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ JWT_EXPIRATION_TIME=3600
 JWT_ACCESS_TOKEN_SECRET=verysecretyesyes
 JWT_ACCESS_TOKEN_EXPIRATION_TIME=3600
 JWT_REFRESH_TOKEN_EXPIRATION_TIME=3600
+APP_ORIGIN=http://localhost:3000
