--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=194.249.251.33
 POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=root
-POSTGRES_DB=quotes-db
-PORT=8000
-MODE=DEV
+POSTGRES_USER=skillup0117
+POSTGRES_PASSWORD="Pr3s3nt-15"
+POSTGRES_DB=Pukmajster_SkillUp_01
+PORT=80
+MODE=PRODUCTION
 RUN_MIGRATIONS=true
 JWT_EXPIRATION_TIME=3600
 JWT_ACCESS_TOKEN_SECRET=verysecretyesyes
 JWT_ACCESS_TOKEN_EXPIRATION_TIME=3600
 JWT_REFRESH_TOKEN_EXPIRATION_TIME=3600
-APP_ORIGIN=http://localhost:3000
+APP_ORIGIN=http://quotes-frontend.s3-website.eu-central-1.amazonaws.com
