--- a/.env.production
+++ b/.env.production
@@ -3,13 +3,13 @@ POSTGRES_PORT=5432
 POSTGRES_USER=skillup0117
 POSTGRES_PASSWORD="Pr3s3nt-15"
 POSTGRES_DB=Pukmajster_SkillUp_01
-PORT=8000
-MODE=DEVELOPMENT
+PORT=80
+MODE=PRODUCTION
 RUN_MIGRATIONS=true
 JWT_EXPIRATION_TIME=3600
 JWT_ACCESS_TOKEN_SECRET=verysecretyesyes
 JWT_ACCESS_TOKEN_EXPIRATION_TIME=3600
 JWT_REFRESH_TOKEN_EXPIRATION_TIME=3600
-APP_ORIGIN=http://localhost:8000
-TYPEORM_ENTITIES="**/*.entity{.ts,.js}"
-TYPEORM_MIGRATIONS="src/migration/*.ts"
+APP_ORIGIN=http://quotes-frontend.s3-website.eu-central-1.amazonaws.com
+TYPEORM_ENTITIES="dist/**/*.entity{.ts,.js}"
+TYPEORM_MIGRATIONS="dist/migration/**/*.js"
